flowlog-build/tests/errors/parser/type_decl_shadow_primitive.dl
.type number = int64
.decl R(x: number)
R(1).
